# shunkakinoki

./: .editorconfig  .gitbook.yaml  .gitignore  .mergify.yml  .travis.yml  CHANGELOG.md  Cargo.toml  Cargo.toml-e  LABELS.md  README.md  app-e09dce18e2dd744c7115.js  app-e09dce18e2dd744c7115.js.map  chunk-map.json  commons-58e09c7cbdd8bca50124.js  commons-58e09c7cbdd8bca50124.js.map  commons-5b94055e9a756f6fc217.js  commons-5b94055e9a756f6fc217.js.map  commons-b5b0bf0542ef552dcb8b.js  commons-b5b0bf0542ef552dcb8b.js.map  component---node-modules-narative-gatsby-theme-novela-src-templates-article-template-tsx-aa116b4bd6568cf27544.js  component---node-modules-narative-gatsby-theme-novela-src-templates-article-template-tsx-aa116b4bd6568cf27544.js.map  gatsby-config.js  index.html  package.json  rss.xml  style.rb  webpack-runtime-0f2d5f178dd2e5a254cf.js  webpack-runtime-0f2d5f178dd2e5a254cf.js.map  webpack.stats.json
.dependabot/: config.yml
.github/: CODEOWNERS
.github/workflows/: auto-approve.yml  auto-merge.yml  deploy.yml  issue.yml  markdown.yml  pull_request.yml  release.yml  ruby.yml  rust.yml  wiki.yml  yarn.yml
.mergify/: config.yml
300/: index.html
authors/shunkakinoki/: index.html
blog/: life-mission.md
old/: ai.md  coding.md  mindset.md
page-data/: app-data.json
page-data/300/: page-data.json
page-data/index/: page-data.json
psycho/: imperfection.md
shunkakinoki/: main.rs  update.rs
tests/: version-numbers.rs
wiki/: 201910.md  Home.md  _Sidebar.md  sheets.md
wiki/outline/: 2019.md  201910.md  201911.md  202000.md
wiki/promise/: nap.md  (+6 more)
(+50 files in other folders)
