[package]
name = "shunkakinoki"
version = "2.11.2"
authors = ["Shun Kakinoki <shunkakinoki@gmail.com>"]
edition = "2018"
license = "MIT"
homepage = "https://github.com/shunkakinoki/shunkakinoki"
description = "shunkakinoki"
autobins = false
include = ["shunkakinoki/**/*", "Cargo.toml"]

[[bin]]
name = "shunkakinoki"
path = "shunkakinoki/main.rs"

[dependencies]
clap = "2.33.0"
webbrowser = "0.5.2"
self_update = "0.13.0"

[dev-dependencies]
version-sync = "0.8"
